Fix vertical alignment of search icon.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/browse.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/browse.css
@@ -196,3 +196,7 @@ label {
 #browse-mode-dropdown:hover {
 	color: #23527c;
 }
+
+.input-group-addon.glyphicon {
+	top: 0;
+}
